<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:padding="4dip"
	android:scrollbars="vertical">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:padding="8dip">
			<TextView android:text="@string/dialog_aa_font_notice_1"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
			<TextView android:text="@string/dialog_aa_font_notice_2"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
			<TextView android:text="@string/dialog_aa_font_notice_3"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
			<TextView android:id="@+id/aa_font_already_installed"
				android:text="@string/dialog_aa_font_already_installed"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		</LinearLayout>
		<Button android:text="@string/dialog_aa_font_install"
			android:id="@+id/aa_font_install" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center_horizontal" />
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:padding="8dip" android:layout_weight="1">
			<WebView android:id="@+id/aa_font_license"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:textSize="10dip" />
		</LinearLayout>

	</LinearLayout>
</ScrollView>
