<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:scrollbars="horizontal"
		android:gravity="center_vertical" style="AboutDialogTitle"
		android:paddingBottom="4dip">
		<ImageView android:src="@drawable/icon"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="8dip" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/app_name"
			style="AboutDialogTitle" android:layout_marginLeft="8dip"
			android:textColor="@color/white" android:textSize="16dip" />
		<TextView android:id="@+id/about_version"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			style="AboutDialogTitle" android:textColor="@color/white"
			android:textSize="16dip" />
	</LinearLayout>
	<ImageView android:src="@android:drawable/divider_horizontal_dim_dark"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:orientation="vertical" android:padding="12dip">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/dialog_about_copyright"
			android:textColor="@color/white" android:textSize="14dip" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/dialog_about_author_uri"
			android:autoLink="web" android:textColor="@color/white"
			android:textSize="14dip" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/dialog_about_lisence"
			android:textColor="@color/white" android:textSize="14dip" />

	</LinearLayout>
</LinearLayout>
