<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:paddingLeft="8dip"
	android:paddingRight="8dip">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" style="AboutDialogTitle"
		android:paddingBottom="4dip" android:orientation="vertical">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/dialog_add_board_tips_title"
			android:textColor="@color/white" android:textSize="14dip" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/dialog_add_board_tips"
			android:textColor="@color/white" android:textSize="14dip" />
	</LinearLayout>
	<ImageView android:src="@android:drawable/divider_horizontal_dim_dark"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingBottom="4dip" />
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:stretchColumns="1">
		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/dialog_add_board_name"
				android:textColor="@color/white" android:textSize="14dip"
				android:layout_marginRight="12dip" />
			<EditText android:id="@+id/add_board_name"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:singleLine="true" />
		</TableRow>
		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/dialog_add_board_uri"
				android:textColor="@color/white" android:textSize="14dip"
				android:layout_marginRight="12dip" android:singleLine="true" />
			<EditText android:id="@+id/add_board_uri"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:inputType="textUri" android:singleLine="true" />
		</TableRow>
	</TableLayout>
</LinearLayout>




