<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="0dip" android:layout_weight="1"
		android:scrollbarStyle="outsideInset" android:fillViewport="true">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical">
			<TableLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TableRow>
					<EditText android:id="@+id/entry_edit_name"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:maxLines="1" android:layout_weight="1"
						android:hint="@string/btn_label_entry_edit_name"
						android:singleLine="true" />
					<ImageButton android:id="@+id/entry_edit_name_clear"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:src="@drawable/ic_btn_x" />
				</TableRow>

				<TableRow>
					<EditText android:text="sage" android:id="@+id/entry_edit_mail"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:maxLines="1" android:layout_weight="1"
						android:hint="@string/btn_label_entry_edit_mail"
						android:singleLine="true" />
					<ImageButton android:id="@+id/entry_edit_mail_clear"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:src="@drawable/ic_btn_x" />
				</TableRow>
			</TableLayout>
			<EditText android:id="@+id/entry_edit_body"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" android:gravity="left|top"
				android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
				android:imeOptions="actionDone|flagNoEnterAction" />

			<Button android:id="@+id/entry_edit_submit" android:text="@string/btn_label_entry_edit_submit"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
